@@ -1,5 +1,11 @@
 2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>
 
+		* gameswf/gameswf_environment.cpp
+		* gameswf/gameswf_environment.h
+		Flash 8 can have local zero register
+		
+2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>
+
 		* base/tu_timer.cpp
 		* base/tu_timer.h
 		* gameswf/gameswf.h
